--- a/doc/trunk/design/syn/S05.pod
+++ b/doc/trunk/design/syn/S05.pod
@@ -14,9 +14,9 @@ Allison Randal <al@shadowed.net>
    Maintainer: Patrick Michaud <pmichaud@pobox.com> and
                Larry Wall <larry@wall.org>
    Date: 24 Jun 2002
-   Last Modified: 13 May 2006
+   Last Modified: 3 June 2006
    Number: 5
-   Version: 24
+   Version: 25
 
 This document summarizes Apocalypse 5, which is about the new regex
 syntax.  We now try to call them I<regex> because they haven't been
@@ -631,8 +631,10 @@ The special named assertions include:
      / <before pattern> /    # was /(?=pattern)/
      / <after pattern> /     # was /(?<pattern)/
 
-     / <ws> /                # match whitespace by :s policy
      / <sp> /                # match the SPACE character (U+0020)
+     / <ws> /                # match "whitespace":
+                             #   \s+ if it's between two \w characters,
+                             #   \s* otherwise
 
      / <at($pos)> /          # match only at a particular StrPos
      			     # short for <?{ .pos == $pos }>
