typo from scook0++
git-svn-id: http://svn.pugscode.org/pugs@23438 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -132,7 +132,7 @@ Where SIMPLE is defined as
     ?TERM	# any single term coerced to boolean
     !TERM	# any single term coerced to boolean
     @a[SIMPLE]	# any of these simples used as subscript recursively
-    %a[SIMPLE]	# any of these simples used as subscript recursively
+    %a{SIMPLE}	# any of these simples used as subscript recursively
 
 We also include:
 
