--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -980,7 +980,7 @@ I<long dot> syntax:
 Perl 6 has 22 precedence levels (which is fewer than Perl 5):
 
     terms               42 "eek" $x /abc/ (1+2) a(1) :by(2) .meth listop
-    method postfix      . .+ .? .* .() .[] .{} .«» .:: .=
+    method postfix      . .+ .? .* .() .[] .{} .<> .«» .:: .=
     autoincrement       ++ --
     exponentiation      **
     symbolic unary      ! + - ~ ? $ @ % & +^ ~^ ?^ \ ^ =
