* S03: allow post-assignment forms to be SIMPLE:     $x[$y + $z]     # simple scalar     $x[$y += $z]    # simple scalar, too
git-svn-id: http://svn.pugscode.org/pugs@23445 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -147,8 +147,9 @@ where C<OP> is includes any standard scalar operators in the five
 precedence levels autoincrement, exponentiation, symbolic unary,
 multiplicative, and additive; but these are limited to standard
 operators that are known to return numbers, strings, or booleans.
-(Operators that imply list operations are excluded: C<$>, C<@>,
-and C<xx>, for instance.  Hyper operators are also excluded.)
+(Operators that imply list operations are excluded: C<@>, C<%>,
+and C<xx>, for instance.  Hyper operators are also excluded, but
+post-assigment forms such as C<SIMPLE += SIMPLE> is allowed.)
 
 All other forms imply list assignment, and will evaluate both sides
 of the assignment in list context (eventually).   However, this is
