* S03: the ()= form is no more; reflect it in the operator table.
git-svn-id: http://svn.pugscode.org/pugs@23446 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -996,9 +996,9 @@ Perl 6 has 22 precedence levels (which is fewer than Perl 5):
     tight and           &&
     tight or            || ^^ //
     ternary             ?? !!
-    assignment          = := ::= += -= **= xx= .= etc. (and also =>)
+    assignment          => := ::= += -= **= xx= .= etc. (also = with simple lvalues)
     loose unary         true not
-    list ops            , print push any all etc. and ()= rightward
+    list ops            , print push any all etc. (also = with non-simple lvalues)
     list infix          ¥ <== ==>
     loose and           and
     loose or            or xor err
